force-app/main/default/src/objects/PJN_Event__c/PJN_Event__c.object-meta.xml
<CustomObject>
    <description>Object to track Events for patients, referrals, and shipments. It goes together with Event Values and Event Automation objects.</description>
    <label>Event</label>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>