force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Coverage_Types</valueSetName>
    </valueSet>
</CustomField>