force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Active_Coverage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>MVN_Active_Coverage_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Coverage Investigation</label>
    <referenceTo>PJN_Coverage_Investigation__c</referenceTo>
    <relationshipLabel>Events (Active Coverage Investigation)</relationshipLabel>
    <relationshipName>Events_Active_CI</relationshipName>
    <type>Lookup</type>
</CustomField>