force-app/main/default/src/objects/PJN_Event__c/fields/MVN_BV_Coverage_Outcome_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_BV_Coverage_Outcome_Formula__c</fullName>
    <formula>IF(ISPICKVAL(MVN_Insured__c, &quot;No&quot;), 
&quot;NO INSURANCE&quot;,
CASE(MVN_Primary_BV_Outcome__c,
&quot;Covered&quot;, &quot;COVERED WITH NO RESTRICTIONS&quot;,
&quot;Covered with PA&quot;, &quot;COVERED WITH RESTRICTIONS&quot;,
&quot;Not Covered&quot;, &quot;NO INSURANCE&quot;,
null
))</formula>
    <label>BV Coverage Outcome Formula</label>
    <type>Text</type>
</CustomField>