force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Care_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Care_Plan_Id__c</fullName>
    <description>Care Plan Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Plan Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>