force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Clinical_Trial_Transition_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Clinical_Trial_Transition_Formula__c</fullName>
    <formula>IF( MVN_Clinical_Trial_Transition_Patient__c, &apos;Y&apos;, &apos;N&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinical Trial Transition Formula</label>
    <type>Text</type>
</CustomField>