force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Confirmed_Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Acquisition_Channel__c</fullName>
    <label>Confirmed Acquisition Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specialty Pharmacy</fullName>
            </value>
            <value>
                <fullName>Buy and Bill</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
                <isActive>false</isActive>
                <label>Undecided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>