force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Confirmed_Clinical_Setting__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Clinical_Setting__c</fullName>
    <label>Confirmed Clinical Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Office</fullName>
            </value>
            <value>
                <fullName>Infusion Center</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>