force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Confirmed_Treatment_Setting__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Treatment_Setting__c</fullName>
    <label>Confirmed Treatment Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Clinical Setting</fullName>
            </value>
            <value>
                <fullName>Hospital System SP</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>