force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Copado_Demo__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copado_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Copado Demo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>