force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coverage_Type__c</fullName>
    <description>The type of primary benefit coverage</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>