force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>MVN_Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HoFH</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>