force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Diagnosis_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Diagnosis_Formula__c</fullName>
    <formula>IF( ISPICKVAL(MVN_Diagnosis__c, &apos;HoFH&apos;), &apos;Y&apos;, &apos;N&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagnosis Formula</label>
    <type>Text</type>
</CustomField>