force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Enrolled_Patient_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Enrolled_Patient_Formula__c</fullName>
    <formula>IF(
NOT(ISBLANK(PJN_Date_Start_Form_Received__c)),
&apos;Y&apos;,
&apos;N&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled Patient Formula</label>
    <type>Text</type>
</CustomField>