force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Event_Created_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Event_Created_Date_Formula__c</fullName>
    <formula>IF(
 MVN_HIPAA_Consent_Status_Formula__c==&apos;N&apos; &amp;&amp;  ISPICKVAL(PJN_New_Therapy_Sub_Status__c, &apos;New Referral&apos;),

 null,
 
 LEFT(TEXT(CreatedDate),4)&amp;
 MID(TEXT(CreatedDate),6,2)&amp;
 MID(TEXT(CreatedDate),9,2)&amp;
 MID(TEXT(CreatedDate),12,2)&amp;
 MID(TEXT(CreatedDate),15,2)&amp;
 MID(TEXT(CreatedDate),18,2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Created Date Formula</label>
    <type>Text</type>
</CustomField>