force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Event_Created_Date_Formula_Transact__c.field-meta.xml
<CustomField>
    <fullName>MVN_Event_Created_Date_Formula_Transact__c</fullName>
    <formula>LEFT(TEXT(CreatedDate),4)&amp;
MID(TEXT(CreatedDate),6,2)&amp;
MID(TEXT(CreatedDate),9,2)&amp;
&apos;000000&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Created Date Formula Transaction</label>
    <type>Text</type>
</CustomField>