force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Has_Medical_Coverage__c.field-meta.xml
<CustomField>
    <fullName>MVN_Has_Medical_Coverage__c</fullName>
    <description>Flag indicating if patient has medical coverage</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Has Medical Coverage</label>
    <length>1</length>
    <type>Text</type>
</CustomField>