force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Has_Medical_Coverage_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Has_Medical_Coverage_Formula__c</fullName>
    <description>Field indicating if patient has medical coverage</description>
    <formula>CASE(MVN_Insured__c, 
&quot;Yes&quot;, &quot;Y&quot;, 
&quot;No&quot;, &quot;N&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Medical Coverage Formula</label>
    <type>Text</type>
</CustomField>