force-app/main/default/src/objects/PJN_Event__c/fields/MVN_HIPAA_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_HIPAA_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HIPAA Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Events (HIPAA Consent)</relationshipLabel>
    <relationshipName>Events_HIPAA_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>