force-app/main/default/src/objects/PJN_Event__c/fields/MVN_HUB_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_HUB_Code__c</fullName>
    <defaultValue>&quot;REGENERONHUB&quot;</defaultValue>
    <description>Unique identifier for submitting HUB</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HUB Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>