force-app/main/default/src/objects/PJN_Event__c/fields/MVN_ICD_10_CM_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_ICD_10_CM_Diagnosis_Code__c</fullName>
    <label>ICD-10-CM Diagnosis Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E78.01</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>