force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Infusion_Fluid_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Infusion_Fluid_Type__c</fullName>
    <description>Product name and strength as represented by the NDC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Infusion Fluid Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>