force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Insured__c.field-meta.xml
<CustomField>
    <fullName>MVN_Insured__c</fullName>
    <label>Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>