force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Milestone__c.field-meta.xml
<CustomField>
    <fullName>MVN_Milestone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>