force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Milestone_Active__c.field-meta.xml
<CustomField>
    <fullName>MVN_Milestone_Active__c</fullName>
    <description>Patient journey milestone for Status = Active</description>
    <formula>CASE(PJN_New_Therapy_Status__c, &quot;Active&quot;,
CASE(PJN_New_Therapy_Sub_Status__c,
&quot;Treatment Confirmed&quot;, &quot;OB&quot;,
&quot;Patient Support&quot;, &quot;OB&quot;,
&quot;Prescriber Support&quot;, &quot;OB&quot;,
&quot;Transfer to SP IAP&quot;, &quot;OB&quot;,
&quot;Transfer to SP PAP&quot;, &quot;OB&quot;,
&quot;Prior Authorization Support Start&quot;, &quot;OB&quot;,
&quot;Prior Authorization Approved&quot;, &quot;OB&quot;,
&quot;Prior Authorization Denied&quot;, &quot;OB&quot;,
&quot;Appeal Support (1st Level)&quot;, &quot;OB&quot;,
&quot;Appeal Support (2nd Level)&quot;, &quot;OB&quot;,
&quot;Appeal Support (3rd Level)&quot;, &quot;OB&quot;,
&quot;Appeal Support (Peer-to-Peer)&quot;, &quot;OB&quot;,
&quot;Appeal Approved&quot;, &quot;OB&quot;,
&quot;Appeal Denied&quot;, &quot;OB&quot;,
&quot;PA/Appeal Support Max Attempts&quot;, &quot;OB&quot;,
&quot;Claims Support&quot;, &quot;OB&quot;,
&quot;Copay Support&quot;, &quot;OB&quot;,
null),
null)</formula>
    <label>Milestone - Active</label>
    <type>Text</type>
</CustomField>