force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Milestone_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>MVN_Milestone_Cancelled__c</fullName>
    <description>Patient journey milestone for Status = Cancelled</description>
    <formula>CASE(PJN_New_Therapy_Status__c, &quot;Cancelled&quot;,
CASE(PJN_New_Therapy_Sub_Status__c,
&quot;Missing Information, Max Attempts&quot;,&quot;PE&quot;,
&quot;Indication Criteria Not Met&quot;,&quot;PE&quot;,
&quot;Requirement Not Met - Patient Residency&quot;,&quot;PE&quot;,
&quot;Requirement Not Met - Prescriber License&quot;,&quot;PE&quot;,
&quot;Unable to reach Patient on required contact, Max Attempts&quot;,&quot;PE, FR&quot;,
&quot;Unable to reach Prescriber on required contact, Max Attempts&quot;,&quot;PE, FR&quot;,
&quot;Patient Decision - Alternate Therapy&quot;,&quot;FR&quot;,
&quot;Patient Decision - Financial&quot;,&quot;FR&quot;,
&quot;Patient Decision - Other&quot;,&quot;FR&quot;,
&quot;Prescriber Decision - Alternate Therapy&quot;,&quot;FR&quot;,
&quot;Prescriber Decision - Financial&quot;,&quot;FR&quot;,
&quot;Prescriber Decision - Coverage Effort&quot;,&quot;FR&quot;,
&quot;Prescriber Decision - Other&quot;,&quot;FR&quot;,
&quot;Patient Medical Delay, Max Delay&quot;,&quot;FR&quot;,
&quot;No Route of Access&quot;,&quot;FR&quot;,
&quot;Patient Deceased&quot;,&quot;PE, FR&quot;,
&quot;Other&quot;,&quot;PE, FR&quot;,
null),
null)</formula>
    <label>Milestone - Cancelled</label>
    <type>Text</type>
</CustomField>