force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Milestone_Pending__c.field-meta.xml
<CustomField>
    <fullName>MVN_Milestone_Pending__c</fullName>
    <description>Patient journey milestone for Status = Pending</description>
    <formula>CASE(PJN_New_Therapy_Status__c, &quot;Pending&quot;,
CASE(PJN_New_Therapy_Sub_Status__c,
&quot;New Referral&quot;,&quot;PE&quot;,
&quot;Missing Information, Patient Outreach&quot;,&quot;PE&quot;,
&quot;Missing Information, HCP Outreach&quot;,&quot;PE&quot;,
&quot;Missing Information, RBM Outreach&quot;,&quot;PE&quot;,
&quot;Prescriber Welcome Call Attempted&quot;,&quot;PE&quot;,
&quot;Prescriber Welcome Call Completed&quot;,&quot;PE&quot;,
&quot;Patient Welcome Call Attempted&quot;,&quot;PE&quot;,
&quot;Patient Welcome Call Completed&quot;,&quot;PE&quot;,
&quot;Copay Card Enrolled&quot;,&quot;PE&quot;,
&quot;Copay Card Not Eligible&quot;,&quot;PE&quot;,
&quot;Transfer to SP CTTP&quot;,&quot;FR&quot;,
&quot;Benefits Investigation Start&quot;,&quot;BI&quot;,
&quot;Benefits Investigation Completed&quot;,&quot;TR&quot;,
&quot;Access Plan Pending Confirmation&quot;,&quot;TR&quot;,
&quot;Access Plan Confirmed&quot;,&quot;TR&quot;,
&quot;Transfer to HCP B&amp;B&quot;,&quot;TR&quot;,
&quot;Transfer to SP Commercial&quot;,&quot;TR&quot;,
&quot;Transfer to SP PAP&quot;,&quot;TR&quot;,
&quot;Prior Authorization Support Start&quot;,&quot;PA&quot;,
&quot;Prior Authorization Approved&quot;,&quot;PA&quot;,
&quot;Prior Authorization Denied&quot;,&quot;PA&quot;,
&quot;Appeal Support (1st Level)&quot;,&quot;PA&quot;,
&quot;Appeal Support (2nd Level)&quot;,&quot;PA&quot;,
&quot;Appeal Support (3rd Level)&quot;,&quot;PA&quot;,
&quot;Appeal Support (Peer-to-Peer)&quot;,&quot;PA&quot;,
&quot;Appeal Approved&quot;,&quot;PA&quot;,
&quot;Appeal Denied&quot;,&quot;PA&quot;,
&quot;PA/Appeal Support Max Attempts&quot;,&quot;PA&quot;,
&quot;SD Order Confirmed (verbal)&quot;,&quot;FR&quot;,
&quot;SD Order Confirmed (data)&quot;,&quot;FR&quot;,
&quot;SP Shipment Confirmed&quot;,&quot;FR&quot;,
&quot;Site of Care Delayed&quot;,&quot;FR&quot;,
&quot;Site of Care Changed&quot;,&quot;FR&quot;,
&quot;Site of Care Cancelled&quot;,&quot;FR&quot;,
&quot;Site of Care Ready&quot;,&quot;FR&quot;,
&quot;Benefit Investigation COB&quot;,&quot;BI&quot;,
&quot;Prior Authorization Support Queued&quot;,&quot;PA&quot;,
&quot;Prior Authorization Support Unnecessary&quot;,&quot;PA&quot;,
&quot;Pending Onboarding&quot;,&quot;FR&quot;,
&quot;Hospital Pharmacy Review&quot;,&quot;TR&quot;,
&quot;On Hold Medical Delay&quot;, &quot;&quot;,
&quot;On Hold Step Therapy Required&quot;, &quot;&quot;,
&quot;On Hold Patient Travel&quot;, &quot;&quot;,
&quot;On Hold Genetic Testing&quot;, &quot;&quot;,
&quot;On Hold Prescriber Change&quot;, &quot;&quot;,
null),
null)</formula>
    <label>Milestone - Pending</label>
    <type>Text</type>
</CustomField>