force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Missing_Information_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Missing_Information_Formula__c</fullName>
    <formula>TRIM(
LEFT(
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Name&quot;), &quot;Patient Name,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Date of Birth&quot;), &quot;Patient Date of Birth,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Address&quot;), &quot;Patient Address,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Gender&quot;), &quot;Patient Gender,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Start Form&quot;), &quot;Start Form,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Diagnosis Code&quot;), &quot;Diagnosis Code,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Physician Signature&quot;), &quot;Physician Signature,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Physician Signature Date&quot;), &quot;Physician Signature Date,&quot;,null)
,
LEN(
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Name&quot;), &quot;Patient Name,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Date of Birth&quot;), &quot;Patient Date of Birth,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Address&quot;), &quot;Patient Address,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Patient Gender&quot;), &quot;Patient Gender,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Start Form&quot;), &quot;Start Form,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Diagnosis Code&quot;), &quot;Diagnosis Code,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Physician Signature&quot;), &quot;Physician Signature,&quot;,null) &amp;
IF(INCLUDES(MVN_Missing_Information__c, &quot;Physician Signature Date&quot;), &quot;Physician Signature Date,&quot;,null)
)
- 1))</formula>
    <label>Missing Information Formula</label>
    <type>Text</type>
</CustomField>