force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Other_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>MVN_Other_Diagnosis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>