force-app/main/default/src/objects/PJN_Event__c/fields/MVN_PAP_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_PAP_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAP Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Events (PAP Consent)</relationshipLabel>
    <relationshipName>Events_PAP_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>