force-app/main/default/src/objects/PJN_Event__c/fields/MVN_PAP_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_PAP_Consent_Status__c</fullName>
    <description>PAP_CONSENT_STATUS, used for inbound data mapping.</description>
    <label>PAP Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>