force-app/main/default/src/objects/PJN_Event__c/fields/MVN_PAP_Consent_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_PAP_Consent_Status_Formula__c</fullName>
    <formula>IF(ISPICKVAL(MVN_PAP_Consent_Status__c,&apos;Opt In&apos;),&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAP Consent Status Formula</label>
    <type>Text</type>
</CustomField>