force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Patient_Gender_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Gender_Formula__c</fullName>
    <formula>CASE(PJN_Patient_Gender__c, &apos;Male&apos;, &apos;M&apos;, &apos;Female&apos;, &apos;F&apos;,&apos;U&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Gender</label>
    <type>Text</type>
</CustomField>