force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Id__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>