force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Patient_YOB_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_YOB_Formula__c</fullName>
    <formula>LEFT(TEXT(PJN_Patient_DOB__c),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient YOB</label>
    <type>Text</type>
</CustomField>