force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Patient_Zip_3_digits__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Zip_3_digits__c</fullName>
    <formula>LEFT(PJN_Patient_Zip_Code__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Zip 3 digits</label>
    <type>Text</type>
</CustomField>