force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Physician__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the physician account related to the patient&apos;s care plan.</description>
    <label>Physician</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events (Physician)</relationshipLabel>
    <relationshipName>Events_Physician</relationshipName>
    <type>Lookup</type>
</CustomField>