force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Physician_Practice__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Practice__c</fullName>
    <description>Prescriber/HCP&apos;s clinic/practice name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Practice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>