force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Practice__c.field-meta.xml
<CustomField>
    <fullName>MVN_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events (Practice)</relationshipLabel>
    <relationshipName>Events_Practice</relationshipName>
    <type>Lookup</type>
</CustomField>