force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Prescription__c.field-meta.xml
<CustomField>
    <fullName>MVN_Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescription</label>
    <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
    <relationshipLabel>Events (Prescription)</relationshipLabel>
    <relationshipName>Events_Prescription</relationshipName>
    <type>Lookup</type>
</CustomField>