force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Primary_BV_Outcome__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_BV_Outcome__c</fullName>
    <label>Primary BV Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Covered with PA</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>