force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Primary_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Coverage_Type__c</fullName>
    <label>Primary Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>