force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Primary_Coverage_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Coverage_Type_Formula__c</fullName>
    <formula>Case(MVN_Access_Type__c,
 &apos;Cash&apos;,&apos;CASH&apos;,
 &apos;Patient Assistance Program&apos;,&apos;FREE GOODS&apos;,
 &apos;Interim Access Program&apos;,&apos;FREE GOODS&apos;,
 &apos;Clinical Trial Transition Program&apos;,&apos;FREE GOODS&apos;,
TEXT(MVN_Primary_Coverage_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Coverage Type Formula</label>
    <type>Text</type>
</CustomField>