force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Primary_Insurance_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Insurance_Id__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Primary Insurance Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>