force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Primary_PA_Expiration_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_PA_Expiration_Date_Formula__c</fullName>
    <formula>IF(
NOT(ISBLANK(PJN_Primary_PA_Expiration_Date__c)),

   LEFT(TEXT(PJN_Primary_PA_Expiration_Date__c),4)&amp;
   MID(TEXT(PJN_Primary_PA_Expiration_Date__c),6,2)&amp;
   MID(TEXT(PJN_Primary_PA_Expiration_Date__c),9,2)&amp;
   &apos;000000&apos;,

   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary PA Expiration Date Formula</label>
    <type>Text</type>
</CustomField>